ingress/store/store-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-sandbox-ingress
  namespace: store-sandbox
  annotations:
    buildNumber: "1.0"
    kubernetes.io/ingress.class: gce
spec:
  ingressClassName: gce
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /catalog
        pathType: Prefix
        backend:
          service:
            name: catalog-service
            port:
              number: 80
